Edited wiki page through web user interface.

--- a/wiki/UsefulResourcesToRead.wiki
+++ b/wiki/UsefulResourcesToRead.wiki
@@ -1,5 +1,5 @@
+#summary Useful resources are categorized here
 #labels Featured
-#Summary Useful resources are categorized here
 
 
 * Project Development Related *   _Requirements engineering, RUP related ...etc
