Edited wiki page through web user interface.

--- a/wiki/GettingStartedWithProjectSpace.wiki
+++ b/wiki/GettingStartedWithProjectSpace.wiki
@@ -1,9 +1,13 @@
+
+
 We will use google code for:
 * Subversion
 * Task management
 * Defect management
 * Documentation
 
-Subversion settings wil be provided here later
+TODO: Subversion settings wil be provided here later
 
-Task 
+Google issue system was customized to satisfy our task and defect tracking needs.
+
+Read [http://code.google.com/p/support/wiki/WikiSyntax this link] for wiki sysntax. You will use wiki for documentation.
