--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -4,3 +4,4 @@
   * [3Feb10] Supervisor Meeting
   * [8Feb10] group meeting
   * [11Feb10] Supervisor and internal meeting
+  * [16Feb10] Supervisor & Assistants and internal meeting
