Edited wiki page through web user interface.

--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -5,3 +5,4 @@
   * [8Feb10] group meeting
   * [11Feb10] Supervisor and internal meeting
   * [16Feb10] Supervisor & Assistants and internal meeting
+  * [23Feb10] Supervisor & Assistants and internal meeting
