Edited wiki page through web user interface.

--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -6,3 +6,4 @@
   * [11Feb10] Supervisor and internal meeting
   * [16Feb10] Supervisor & Assistants and internal meeting
   * [23Feb10] Supervisor & Assistants and internal meeting
+  * [26Feb10] Assistants and internal meeting
