Edited wiki page through web user interface.

--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -7,3 +7,4 @@
   * [16Feb10] Supervisor & Assistants and internal meeting
   * [23Feb10] Supervisor & Assistants and internal meeting
   * [26Feb10] Assistants and internal meeting
+  * [03Mar10] Supervisory and internal meeting
