--- a/wiki/03Mar10.wiki
+++ b/wiki/03Mar10.wiki
@@ -21,6 +21,6 @@
   * Avoid sending unnecessary or personal emails to the group
   * In your tasks comments, give the address of your results in SVN in terms of URL so everyone can see your documents by one click. Any question related to this ask from Mohsen
   * Managers will manage external emails with the help of English skilled members and just inform the result to the group.
-  * After assigning the tasks, responsible person should provide a plan of doing the task and explain for others in the internal meeting together with Supervisors
+  * After assigning the tasks, responsible person should provide a plan of doing the task and explain for others in the internal meeting together with Assistants
   * Reduce solid commitment to the RUP process to skip the unnecessary artifacts.
-  * Those who are applying the quality reviews should add the name of quality reviewers in the Revision Hisotry. 
+  * Those who are applying the quality reviews should add the name of quality reviewers in the Revision History. 
