Edited wiki page through web user interface.

--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -8,3 +8,4 @@
   * [23Feb10] Supervisor & Assistants and internal meeting
   * [26Feb10] Assistants and internal meeting
   * [03Mar10] Supervisory and internal meeting
+  * [12Mar10] Internal meeting
