Edited wiki page through web user interface.

--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -9,3 +9,4 @@
   * [26Feb10] Assistants and internal meeting
   * [03Mar10] Supervisory and internal meeting
   * [12Mar10] Internal meeting
+  * [15Mar10] Supervisor & Assistants and internal meeting
