Edited wiki page through web user interface.

--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -10,3 +10,4 @@
   * [03Mar10] Supervisory and internal meeting
   * [12Mar10] Internal meeting
   * [15Mar10] Supervisor & Assistants and internal meeting
+  * [18Mar10] Supervisor & Assistants and internal meeting
