Edited wiki page through web user interface.

--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -12,3 +12,4 @@
   * [15Mar10] Supervisor & Assistants and internal meeting
   * [18Mar10] Supervisor & Assistants and internal meeting
   * [25Mar10] Supervisor & Assistants and internal meeting
+  * [26Mar10] Internal meeting
