--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -15,3 +15,4 @@
   * [26Mar10] Internal meeting
   * [29Mar10] Meeting with Jonas for SAD and SDD
   * [1April10]Supervisor & Assistants and internal meeting
+  * [8April10]Supervisor & Assistants and internal meeting
