Edited wiki page through web user interface.

--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -16,3 +16,4 @@
   * [29Mar10] Meeting with Jonas for SAD and SDD
   * [1April10]Supervisor & Assistants and internal meeting
   * [8April10]Supervisor & Assistants and internal meeting
+  * [29April10]Supervisor & Assistants meeting
