Edited wiki page through web user interface.

--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -17,3 +17,4 @@
   * [1April10]Supervisor & Assistants and internal meeting
   * [8April10]Supervisor & Assistants and internal meeting
   * [15April10]Supervisor & Assistants meeting
+  * [29April10]Supervisor & Assistants meeting
