Edited wiki page through web user interface.

--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -18,3 +18,4 @@
   * [8April10]Supervisor & Assistants and internal meeting
   * [15April10]Supervisor & Assistants meeting
   * [29April10]Supervisor & Assistants meeting
+  * [07May10]Group meeting
