Edited wiki page MeetingSummaries through web user interface.

--- a/wiki/MeetingSummaries.wiki
+++ b/wiki/MeetingSummaries.wiki
@@ -19,3 +19,4 @@
   * [15April10]Supervisor & Assistants meeting
   * [29April10]Supervisor & Assistants meeting
   * [07May10]Group meeting
+  * [18Jul12]Group meeting
